# Auth_sprint_2

./: .dockerignore  README.md  env.sample
async_api/: .gitignore  README.dev.md  README.md  docker-compose.dump.yml  docker-compose.stor.yml  docker-compose.test.yml  docker-compose.yml  file
auth_api/: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  env.sample  pyproject.toml
auth_api/design/: authservice_openapi.yaml  dbdiagramio.code
auth_api/pgdatabase/: db_schema.sql
auth_api/src/: Dockerfile.prod  main.py  pywsgi.py
auth_api/src/api/: common.py
auth_api/src/api/v1/: routes.py
auth_api/src/api/v1/oauth/: routes.py
auth_api/src/api/v1/permission/: routes.py
auth_api/src/api/v1/role/: routes.py
auth_api/src/api/v1/user/: routes.py
auth_api/src/core/: commands.py  containers.py  oauth.py  settings.py  tracer.py  utils.py
auth_api/src/db/: pg.py  redis_client.py
auth_api/src/models/: auth_event.py  permission.py  role.py  role_permissions.py  roles_owners.py  social_accounts.py  token.py  user.py
auth_api/src/services/: base.py  oauth.py  oauth_login.py  permission.py  role.py  user.py  user_role.py
auth_api/tests/: Dockerfile
auth_api/tests/functional/: conftest.py  settings.py
auth_api/tests/functional/src/: test_async_auth_integration.py  test_flask_connection.py  test_permissions_crud.py  test_pg_database_creation.py  test_rate_limit.py  test_redis_database_connection.py  test_roles_crud.py  test_user.py
auth_api/tests/functional/utils/: extract.py  models.py
design/: authservice_openapi.yaml
src/: Dockerfile  (+2 more)
(+63 files in other folders)
