[tool.poetry]
name = "auth_sprint_1"
version = "0.1.0"
description = ""
authors = ["Sergey Simenshteyn <simenshteyn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
psycopg2-binary = "^2.9.1"
pydantic = "^1.8.2"
Flask = "^2.0.2"
redis = "^3.5.3"
dependency-injector = "^4.37.0"
Flask-SQLAlchemy = "^2.5.1"
requests = "^2.26.0"
Flask-JWT-Extended = "^4.3.1"
email-validator = "^1.1.3"
Flask-Pydantic = "^0.9.0"
gevent = "^21.8.0"
isort = "^5.10.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^4.0.1"
asyncio = "^3.4.3"
aiohttp = "^3.8.0"
pytest-asyncio = "^0.16.0"
pytest-flask = "^1.2.0"
aioredis = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

